# cli2048-rs

./: Cargo.toml  LICENSE-NCURSES  README.md
src/: constants.rs  lib.rs  macros.rs  main.rs  matrix.rs
src/game/: board.rs  display.rs  events.rs  mod.rs  player.rs
